name:                monitor-lib
version:             0.0.1.0
synopsis:            Monitoring aggregator
description:         Monitoring aggregator
homepage:            https://github.com/kuznero/monitor#README
license:             MIT
license-file:        LICENSE
author:              Roman Kuznetsov
maintainer:          roman@kuznero.com
copyright:           Roman Kuznetsov
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Monitor
                     , Monitor.Models
                     , Monitor.Engine
                     , Icinga
                     , Icinga.Models
                     , Icinga.Models.ActiveCheck
                     , Icinga.Models.PassiveCheck
                     , Icinga.Models.Report
                     , Network.AMQP.Bus
                     , Network.AMQP.Connector
  other-modules:       Helpers
                     , Monitor.Engine.Internal
                     , Monitor.Engine.Models
                     , Network.AMQP.Connector.Internal
                     , Network.AMQP.Connector.Models
  build-depends:       base >=4.9 && <4.10
                     , aeson >= 1.0.2.1 && < 1.1
                     , bytestring >= 0.10.8.1 && < 0.11
                     , filemanip >= 0.3.6.3 && < 0.4
                     , filepath >= 1.4.1.1 && < 1.5
                     , process >= 1.4.3.0 && < 1.5
                     , network >= 2.6.3.2 && < 2.7
                     , amqp >= 0.14.1 && < 0.15
                     , text >= 1.2.2.1 && < 1.3
                     , time >= 1.6.0.1 && < 1.7
                     , timeit >= 1.0.0.0 && < 2.0.0.0
                     , containers >= 0.5.7.1 && < 0.6.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:        -Wall

executable monitor
  main-is:             Main.hs
  other-modules:       EngineOptionsParser
  build-depends:       base >=4.9 && <4.10
                     , monitor-lib
                     , wai-cors >= 0.2.5 && < 0.3
                     , wai-extra >= 3.0.20.0 && < 3.1
                     , wai-middleware-static >= 0.8.1 && < 0.9
                     , scotty >= 0.11.0 && < 0.12
                     , text >= 1.2.2.1 && < 1.3
                     , optparse-applicative >= 0.13.2.0 && < 0.14
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:        -Wall

test-suite monitor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Arbitraries
  build-depends:       base
                     , monitor-lib
                     , network >= 2.6.3.2 && < 2.7
                     , text >= 1.2.2.1 && < 1.3
                     , QuickCheck >= 2.9.2 && < 3.0
                     , hspec >= 2.4.3 && < 2.5
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -Wno-orphans
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kuznero/monitor/
